fixed alignment of compact header

--- a/themes/hugo-zen/static/css/custom.css
+++ b/themes/hugo-zen/static/css/custom.css
@@ -69,7 +69,7 @@ main {
 
 .header-compact {
     display: table;
-    height: 60px;
+    width: 100%;
 }
 
 .header-left {
@@ -80,8 +80,8 @@ main {
 
 .header-right {
     display: table-cell;
-    padding-left: 2em;
     vertical-align: top;
+    padding-right: 120px; /* double width of .header-logo */
 }
 
 .header-logo {
